--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ jupyterlab-pygments==0.2.2
 kiwisolver==1.4.4
 lazy_loader==0.2
 librosa==0.10.0.post2
-llvmlite==0.39.1
+llvmlite
 MarkupSafe==2.1.2
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
@@ -64,7 +64,7 @@ nest-asyncio==1.5.6
 networkx==3.1
 notebook==6.5.4
 notebook_shim==0.2.2
-numba==0.56.4
+numba
 numpy==1.23.5
 opencv-python==4.7.0.72
 packaging==23.1
@@ -115,15 +115,15 @@ testpath==0.5.0
 textwrap3==0.9.2
 threadpoolctl==3.1.0
 tinycss2==1.1.1
-tokenizers==0.10.3
+tokenizers
 tomlkit==0.11.0
-torch==1.10.1+cu111
-torchaudio==0.10.1+cu111
+torch
+torchaudio
 torchsummary==1.5.1
-torchvision==0.11.2+cu111
-tornado==6.1
+torchvision
+tornado
 tqdm==4.63.0
-traitlets==5.1.1
+traitlets
 transformers==4.7.0
 trimesh==3.12.6
 typing_extensions==4.5.0
